--- a/ICTPlabs.ipynb
+++ b/ICTPlabs.ipynb
@@ -29,14 +29,14 @@
    "metadata": {},
    "source": [
     "You *can* try using python directing online from https://colab.research.google.com/.\n",
-    "This way, you won't need to install python locally, ***however***, some things will be more complicated. In particular, you cannot (easily) use the code in `./src`, `plotly` will not work as nicely, and you will need to also upload the data to use it on colab."
+    "This way, you won't need to install python locally, ***however***, some things will be more complicated. In particular, `plotly` will not work as nicely, and you will need to upload the data on google drive and figure out how to use it on colab."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you want to use python locally, the easiest way is probably to have anaconda installed (although this is not strictly required, you could probably also make by with the pre-installed python distribution on your system, you will just need to install manually more packages with `pip`). ***You don't need sudo access to install anaconda***. Just download it from https://repo.anaconda.com/archive/Anaconda3-2019.10-Linux-x86_64.sh, and then run the following command from a terminal\n",
+    "To use python locally, the easiest way is probably to have anaconda installed (although this is not strictly required, you could probably also make by with the pre-installed python distribution on your system, you will just need to install manually more packages with `pip`). ***You don't need sudo access to install anaconda***. Just download it from https://repo.anaconda.com/archive/Anaconda3-2019.10-Linux-x86_64.sh, and then run the following command from a terminal\n",
     "\n",
     "`bash ~/Downloads/Anaconda3-2019.10-Linux-x86_64.sh`.\n",
     "\n",
