added solutions and fixed few typos

--- a/ICTPlabs.ipynb
+++ b/ICTPlabs.ipynb
@@ -56,11 +56,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`$ conda install qutip, tqdm, imageio,plotly, sklearn, seaborn, numpy, matplotlib, scipy, scikit-learn, progressbar2, theano, keras`\n",
-    "\n",
-    "`$ conda install pytorch torchvision cudatoolkit=10.1 -c pytorch` (only if you use pytorch)\n",
-    "\n",
-    "More generally, whenever you get an error like `No module named 'pippo'`, it probably means that you need to install the corresponding package. Just run `conda install pippo` to do it. If that doesn't work, try with `pip install pippo`. If also that doesn't work, you might be cursed. Feel free to call me to come perform exorcism on your computer."
+    "To install packages, the recommended way is via the command line. You can however also do it directly from here, using the following command:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!conda install --yes qutip\n",
+    "!conda install --yes imageio\n",
+    "!conda install --yes numpy, matplotlib, scipy, scikit-learn, plotly, seaborn\n",
+    "!conda install --yes theano, pytorch"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that this is *not* recommended, and might lead to problems for some packages. It's generally better to install packages directly from the terminal with `conda install package1, package2,... `."
    ]
   },
   {
@@ -100,7 +115,7 @@
    "source": [
     "- To import images to numpy array, use `imageio`. E.g. `imageio.imread(filepath)`.\n",
     "- To list the files of a specific type in a given directory use `glob`. E.g. `glob.glob('*.png')`.\n",
-    "- To use PCA, use `scikit-learn`. E.g. have a look at `sklearn.decomposition.PCA`."
+    "- To use PCA, use `scikit-learn`. This is imported with `import sklearn`. E.g. have a look at `sklearn.decomposition.PCA`."
    ]
   },
   {
@@ -108,6 +123,13 @@
    "metadata": {},
    "source": [
     "# Imports"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following tries to import all the packages you are likely going to need afterwards. If some package is giving you some problem, you can try to comment the corresponding line. It's possible you might not need that specific package, or that you can avoid using it for what you are going to do."
    ]
   },
   {
@@ -159,7 +181,6 @@
    "source": [
     "import sys\n",
     "import os\n",
-    "from tqdm import tqdm\n",
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -173,8 +194,6 @@
     "\n",
     "import sklearn\n",
     "import sklearn.decomposition\n",
-    "# import skimage\n",
-    "# import skimage.transform\n",
     "\n",
     "import plotly\n",
     "import plotly.offline\n",
@@ -182,9 +201,7 @@
     "plotly.offline.init_notebook_mode(connected=False)\n",
     "\n",
     "os.environ['KERAS_BACKEND'] = 'theano'\n",
-    "import keras\n",
-    "\n",
-    "# import data_files_utils"
+    "import keras\n"
    ]
   },
   {
@@ -2912,7 +2929,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This section contains a few examples of the images you will be working with. ***Note that the code you see won't work. I only include the images to give you an idea of what you are working with*** ${\\tiny\\text{and because they are pretty}}$."
+    "This section contains a few examples of the images you will be working with. ***Note that the code you see won't work. I only include the images to give you an idea of what you are working with***."
    ]
   },
   {
@@ -3033,7 +3050,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that, to build the computational graph, `pytorch` requires you to work with `torch.tensor` objects. These mostly behave like numpy arrays, but some care must be taken. I include a code snippet with a naive NN configuration to get you started (this code is mostly from [this blog post](https://medium.com/dair-ai/a-simple-neural-network-from-scratch-with-pytorch-and-google-colab-c7f3830618e0))."
+    "Note that, to build the computational graph, `pytorch` requires you to work with `torch.tensor` objects. These mostly behave like numpy arrays, but some care must be taken. I include a code snippet with a naive NN configuration to get you started (this code is mostly from [this blog post](https://medium.com/dair-ai/a-simple-neural-network-from-scratch-with-pytorch-and-google-colab-c7f3830618e0), which also explains in detail the various commands)."
    ]
   },
   {
